working on zareia's page right now. currently, 3 of the pngs are posted but the css is a bit too wide. my plan was to look up how to fix this using chat gpt

--- a/zareia/zareia.css
+++ b/zareia/zareia.css
@@ -45,12 +45,18 @@ html {
   body {
     display: flex;
     flex-direction: column;
-    background-color: #dbe2f5;
-    color: #2b66a6; 
+    background-color: teal;
+    color: black; 
   }
   
   div {
-    border-style: solid;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .row {
+    display: flex;
+    flex-direction: row;
   }
   
   #trumpet {
